fix: title align center

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 #enter-code-title {
     font-weight: 900;
     font-size: 40px;
+    text-align: center;
 }
 
 textarea {
